--- a/index.html
+++ b/index.html
@@ -3,87 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StreamFlix - Watch Movies & TV Shows</title>
+    <title>MovieFlix</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">StreamFlix</div>
+        <div class="logo">MovieFlix</div>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li>
-                    <a href="#">Movies</a>
-                    <ul class="dropdown">
-                        <li><a href="#latest-movies">Latest Movies</a></li>
-                        <li><a href="#">Popular Movies</a></li>
-                        <li><a href="#">Top Rated</a></li>
-                    </ul>
-                </li>
+                <li><a href="#">Movies</a></li>
                 <li><a href="#">TV Shows</a></li>
-                <li><a href="#">Genres</a></li>
             </ul>
         </nav>
         <div class="search-bar">
-            <input type="text" placeholder="Search movies or TV shows...">
+            <input type="text" placeholder="Search movies...">
             <button><i class="fas fa-search"></i></button>
         </div>
     </header>
 
     <main>
-        <!-- Featured Movies Slider -->
-        <section class="featured-slider">
-            <h2>Featured Movies</h2>
-            <div class="slider">
-                <div class="slide">
-                    <img src="https://via.placeholder.com/800x450?text=Movie+1" alt="Movie 1">
-                    <div class="slide-content">
-                        <h3>Movie Title 1</h3>
-                        <p>2023 | Action | 2h 15m</p>
-                        <button>Watch Now</button>
-                    </div>
-                </div>
-                <div class="slide">
-                    <img src="https://via.placeholder.com/800x450?text=Movie+2" alt="Movie 2">
-                    <div class="slide-content">
-                        <h3>Movie Title 2</h3>
-                        <p>2023 | Comedy | 1h 45m</p>
-                        <button>Watch Now</button>
-                    </div>
-                </div>
-                <!-- Add more slides -->
-            </div>
-            <button class="slider-btn prev"><i class="fas fa-chevron-left"></i></button>
-            <button class="slider-btn next"><i class="fas fa-chevron-right"></i></button>
-        </section>
-
-        <!-- Latest Movies Section -->
-        <section id="latest-movies" class="latest-movies">
-            <h2>Latest Movies</h2>
-            <div class="movie-grid">
-                <div class="movie-card">
-                    <img src="https://via.placeholder.com/300x450?text=Movie+Poster+1" alt="Movie 1">
-                    <div class="movie-info">
-                        <h3>Movie Title 1</h3>
-                        <p>2023 | Action | 2h 15m</p>
-                    </div>
-                </div>
-                <div class="movie-card">
-                    <img src="https://via.placeholder.com/300x450?text=Movie+Poster+2" alt="Movie 2">
-                    <div class="movie-info">
-                        <h3>Movie Title 2</h3>
-                        <p>2023 | Comedy | 1h 45m</p>
-                    </div>
-                </div>
-                <!-- Add more movie cards -->
-            </div>
-        </section>
+        <section class="movie-grid" id="movies"></section>
     </main>
-
-    <footer>
-        <p>&copy; 2025 StreamFlix. All rights reserved.</p>
-    </footer>
 
     <script src="script.js"></script>
 </body>
