--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MovieFlix</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css"> <!-- Fixed file name -->
 </head>
 <body>
     <header>
@@ -18,8 +18,8 @@
             </ul>
         </nav>
         <div class="search-bar">
-            <input type="text" placeholder="Search movies...">
-            <button><i class="fas fa-search"></i></button>
+            <input type="text" id="searchInput" placeholder="Search movies...">
+            <button onclick="searchMovies()"><i class="fas fa-search"></i></button>
         </div>
     </header>
 
